<resources>
    <string name="app_name">Movie Roster</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_rating">Rating</string>
    <string name="action_popular">Most Popular</string>
    <string name="action_favorites">Favorites</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="loading_trailers">There are no trailers to display</string>
    <string name="loading_reviews">There are currently no reviews</string>
    <string name="release_date">Release Date:</string>

    <string name="reviews_empty">There are currently no reviews</string>
    <string name="trailers_empty">There are currently no trailers</string>

    <!-- Buttons -->
    <string name="button_readmore">Read More</string>
    <string name="button_favorite">FAVORITE</string>
    <string name="button_unfavorite">UNFAVORITE</string>


    <!-- Legal Text -->
    <string name="attribution_text">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>


</resources>
