<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/detail_background_color"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        android:background="@color/detail_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Movie Backdrop above everything with attribution logo on top -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:id="@+id/movie_backdrop_imageview" />

                <ImageView
                    android:layout_width="@dimen/attribution_logo_width"
                    android:layout_height="@dimen/attribution_logo_height"
                    android:layout_alignBottom="@id/movie_backdrop_imageview"
                    android:layout_alignEnd="@id/movie_backdrop_imageview"
                    android:layout_alignRight="@id/movie_backdrop_imageview"
                    android:adjustViewBounds="true"
                    android:src="@drawable/attribution_logo"
                    />

            </RelativeLayout>

            <!-- Title of movie with orange background -->
            <TextView
                style="@style/DetailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movie_title_textview"
                android:paddingBottom="0dp"
                android:text="TESTING Mad Max: Fury Road"
                android:textAlignment="center"
                android:textColor="@color/detail_title_text"
                android:background="@color/highlight_background_color"
                android:gravity="center_vertical|center_horizontal"

                />
        </LinearLayout>

        <!-- Movie poster, Rating, Release Date, Favorite Button on left of Layout ; Synopsis on Right -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Movie Poster, Rating, Release, Favorite -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="0dp"
                android:paddingBottom="0dp"
                >

                <RatingBar
                    style="?android:attr/ratingBarStyleIndicator"
                    android:numStars="5"
                    android:isIndicator="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_ratingbar"
                    android:progressTint="@color/highlight_background_color"
                    android:paddingBottom="0dp"
                   />

                <Button
                    android:id="@+id/action_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_favorite"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:paddingBottom="0dp"
                    android:paddingTop="0dp"
                    />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_alignParentRight="true"
                            android:paddingBottom="0dp">
                        <TextView
                            style="@style/DetailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/movie_release_hardcode"
                            android:paddingBottom="0dp"
                            android:text="@string/release_date"
                            android:layout_gravity="right"
                            />


                        <TextView
                            style="@style/DetailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/movie_release_textview"
                            android:layout_gravity="right"
                            android:paddingBottom="0dp"
                            />
                        </LinearLayout>


            </RelativeLayout>

            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/detail_main_text"
                android:layout_marginBottom="12dp"
                />

            <!-- Synopsis Below -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="20dp">
                <TextView
                    style="@style/DetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_synopsis_textview"
                    android:paddingBottom="10dp" />

            </LinearLayout>
        </LinearLayout>


        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/detail_main_text"
            />


        <!-- Trailers Below -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailers_linear_layout"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empty_trailer"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="@dimen/main_text_size"
                android:background="@color/highlight_background_color"
                android:textColor="@color/detail_title_text"
                android:text="@string/trailers_empty"
                />

            </LinearLayout>

        <View android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/detail_main_text"
            android:layout_marginBottom="30dp"
            />


        <!-- Reviews Below -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_linear_layout"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empty_review"
                android:gravity="center_horizontal"
                android:textSize="@dimen/main_text_size"
                android:textColor="@color/detail_main_text"
                android:text="@string/reviews_empty"
                />

            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/attribution_text_padding"
            android:paddingTop="@dimen/attribution_text_padding"
            android:layout_marginTop="@dimen/attribution_text_margin"
            android:textSize="@dimen/main_text_size"
            android:gravity="center_horizontal|center_vertical"
            android:background="@color/attribution_bg"
            android:textColor="@color/attribution_text"
            android:text="@string/attribution_text"
            />

    </LinearLayout>
</ScrollView>